--- a/genindex.html
+++ b/genindex.html
@@ -74,6 +74,8 @@
         <li><a href="composer.html#composer.ComposerAgent.act">(composer.ComposerAgent method)</a>
 </li>
       </ul></li>
+      <li><a href="markov_chain.html#markov_chain.add_transitions">add_transitions() (in module markov_chain)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="list_memory.html#list_memory.ListMemory.artifacts">artifacts (list_memory.ListMemory attribute)</a>
@@ -98,8 +100,6 @@
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="melodic_chains.html#melodic_chains.concat_melodies">concat_melodies() (in module melodic_chains)</a>
-</li>
       <li><a href="utility.html#utility.convert_melody_to_steps">convert_melody_to_steps() (in module utility)</a>
 </li>
       <li><a href="melodic_chains.html#melodic_chains.create_song">create_song() (in module melodic_chains)</a>
@@ -195,8 +195,6 @@
       <li><a href="list_memory.html#list_memory.ListMemory.memorize">memorize() (list_memory.ListMemory method)</a>
 </li>
       <li><a href="music_environment.html#module-music_environment">music_environment (module)</a>
-</li>
-      <li><a href="music_generator.html#module-music_generator">music_generator (module)</a>
 </li>
       <li><a href="music_environment.html#music_environment.MusicEnvironment">MusicEnvironment (class in music_environment)</a>
 </li>
